--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,3 +8,8 @@ dependencies = [
     "pytest>=8.3.4",
     "pytest-cov>=6.0.0",
 ]
+[tool.pytest.ini_options]
+minversion = "6.0"
+pythonpath = [
+    "src",
+]
